<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/about_sheet"
    style="@style/Widget.Material3.BottomSheet"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <!-- Content Area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:text="About"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_medium"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/closeAboutButton"
            android:layout_alignParentEnd="true"
            style="?attr/materialIconButtonFilledTonalStyle"
            android:backgroundTint="?attr/colorSurfaceContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/close_24px"/>

        </RelativeLayout>

        <!-- Scrollable Content -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Section: About -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">
                    <TextView
                        android:id="@+id/about_us_title_paragraph"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorOnTertiaryContainer"
                        android:text="@string/aboutUsDetail"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="15sp" />
                </LinearLayout>

                <!-- Section: Why We Built This App -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">
                    <TextView
                        android:id="@+id/section_two_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:text="Why We Built This App"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/section_two_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorOnTertiaryContainer"
                        android:text="@string/sectionTwoDetails"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="15sp" />
                </LinearLayout>

                <!-- Section: Our Data Practices -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">
                    <TextView
                        android:id="@+id/section_three_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:text="Our Data Practices"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/section_three_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorOnTertiaryContainer"
                        android:text="@string/sectionThreeDetails"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="15sp" />
                </LinearLayout>

                <!-- Additional Sections -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:text="@string/Authentication"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="16sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:text="@string/PasswordRecovery"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="16sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:text="@string/UserInsights"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="16sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:text="@string/LocationData"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="16sp" />
                </LinearLayout>

                <!-- Section: Who We Are -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:text="Who We Are"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorOnTertiaryContainer"
                        android:text="@string/WhoWeAre"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="15sp" />
                </LinearLayout>

                <!-- Section: Need Help -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:text="Need Help?"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorOnTertiaryContainer"
                        android:text="@string/NeedHelp"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
